Updated readme :abc:

--- a/Federated Learning Simulation.ipynb
+++ b/Federated Learning Simulation.ipynb
@@ -1125,12 +1125,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "0fced250",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> Round:  1 : global model has been updated\n",
+      "--> Round:  2 : global model has been updated\n",
+      "--> Round:  3 : global model has been updated\n",
+      "--> Round:  4 : global model has been updated\n",
+      "--> Round:  5 : global model has been updated\n",
+      "--> Round:  6 : global model has been updated\n",
+      "--> Round:  7 : global model has been updated\n",
+      "--> Round:  8 : global model has been updated\n",
+      "--> Round:  9 : global model has been updated\n",
+      "--> Round:  10 : global model has been updated\n",
+      "--> Round:  11 : global model has been updated\n",
+      "--> Round:  12 : global model has been updated\n",
+      "--> Round:  13 : global model has been updated\n",
+      "--> Round:  14 : global model has been updated\n",
+      "--> Round:  15 : global model has been updated\n",
+      "--> Round:  16 : global model has been updated\n",
+      "--> Round:  17 : global model has been updated\n",
+      "--> Round:  18 : global model has been updated\n",
+      "--> Round:  19 : global model has been updated\n",
+      "--> Round:  20 : global model has been updated\n",
+      "--> Round:  21 : global model has been updated\n",
+      "--> Round:  22 : global model has been updated\n",
+      "--> Round:  23 : global model has been updated\n",
+      "--> Round:  24 : global model has been updated\n",
+      "--> Round:  25 : global model has been updated\n"
+     ]
+    }
+   ],
    "source": [
     "# aggregate per round: our global model updates n times with n amount of clients. \n",
     "\n",
@@ -1169,10 +1201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "228da2e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8232/8232 [==============================] - 16s 2ms/step - loss: 0.9781 - accuracy: 0.7121 - f1_m: 0.7065\n"
+     ]
+    }
+   ],
    "source": [
     "y = test['label']\n",
     "X = test.drop(['label', 'subject'], axis=1)\n",
